# discordshim_rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.armv7  README.md  build.rs  docker-compose-armv7.yml  docker-compose-prebuilt-armv7.yml  docker-compose-prebuilt.yml  docker-compose.yml  requirements.txt
.run/: .gitignore
fail2ban/: check.sh  discordshim.conf  discordshim.local  install.sh
src/: .gitignore  embedbuilder.rs  healthcheck.rs  helper.rs  lib.rs  main.rs  messages.proto  server.rs  test.rs
tests/: .gitignore  __init__.py  livediscordtestcase.py  test_discordshim.py
