[package]
name = "discordshim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12.4"
poise = "0.6.1"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
byteorder = "1.5.0"
zip = "2.2.1"
protobuf = "3.7.1"
log = "0.4.22"
pretty_env_logger = "0.5.0"
regex = "1.11.1"
csv = "1.3.1"
serde = "1.0.215"
console-subscriber = "0.4.1"
async-std = { version = "1.13", features = ["attributes"] }
uuid = { version = "1.11.0", features = [ "v4",  "fast-rng" ] }
color-eyre = "0.6.3"

[build-dependencies]
protobuf-codegen = "3.7.1"
protobuf-parse = "3.7.1"
