[package]
name = "discordshim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12.4"
poise = "0.6.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
byteorder = "1.5.0"
zip = "6.0.0"
protobuf = "3.7.2"
log = "0.4.28"
pretty_env_logger = "0.5.0"
regex = "1.12.2"
csv = "1.4.0"
serde = "1.0.228"
console-subscriber = "0.5.0"
async-std = { version = "1.13", features = ["attributes"] }
uuid = { version = "1.18.1", features = [ "v4",  "fast-rng" ] }
color-eyre = "0.6.5"

[build-dependencies]
protobuf-codegen = "3.7.2"
